[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conf = { path = "../conf" }
llog = { path = "../llog" }
proto = { path = "../proto" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8.4"